--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    div. <
+     class="fab fa-container-storage"></
+        >
 </body>
 </html>
